fixing width issue on IPhone

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 
 @include mat.core();
 
-html, body { height: 100%; }
+html, body { height: 100%; width: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .spacer {
